Closed
Bug 525751
Opened 15 years ago
Closed 15 years ago
Page shows white space when clicking on an in-game link and when updating page
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta5-fixed |
People
(Reporter: tigertownpc, Assigned: tnikkel)
References
()
Details
Attachments
(5 files, 1 obsolete file)
6.18 KB,
patch
|
roc
:
review+
roc
:
approval1.9.2+
|
Details | Diff | Splinter Review |
6.65 KB,
patch
|
roc
:
review+
roc
:
approval1.9.2+
|
Details | Diff | Splinter Review |
166.00 KB,
image/jpeg
|
Details | |
167.45 KB,
image/jpeg
|
Details | |
161.62 KB,
image/jpeg
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2b1) Gecko/20091029 Firefox/3.6b1 (.NET CLR 3.5.30729)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2b1) Gecko/20091029 Firefox/3.6b1 (.NET CLR 3.5.30729)
When clicking on an in-game link, link turns white and page turns white before updating. Also, in-game timers flash while updating.
Firefox 3.5 did not show this behavior (3.5 through 3.5.4 are all OK).
Reproducible: Always
Steps to Reproduce:
1. Go to Mafia Wars game on Tagged
2. Clink on most any button within the game.
3.
Actual Results:
Clicked button and most of page turns white briefly before updating.
Expected Results:
Page should not turn white in any area.
about:buildconfig
Source
Built from http://hg.mozilla.org/releases/mozilla-1.9.2/rev/3b49c063bb42
Build platform
target
i686-pc-mingw32
Build tools
Compiler Version Compiler flags
cl 14.00.50727.762 -TC -nologo -W3 -Gy -Fdgenerated.pdb -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1
cl 14.00.50727.762 -GR- -TP -nologo -Zc:wchar_t- -W3 -Gy -Fdgenerated.pdb -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -GL -wd4624 -wd4952 -O1
Configure arguments
--enable-application=browser --enable-update-channel=beta --enable-update-packaging --enable-jemalloc --enable-official-branding
Reporter | ||
Updated•15 years ago
|
Version: unspecified → 1.9.2 Branch
Reporter | ||
Comment 1•15 years ago
|
||
Is anybody looking into this?
Reporter | ||
Updated•15 years ago
|
Flags: blocking1.9.2?
Reporter | ||
Comment 2•15 years ago
|
||
Further information:
If playing the Mafia Wars game while on the Tagged website (www.tagged.com/mafiawars.html) the condition is true.
If opening the game in a new tab and playing it outside of the Tagged website (http://mwtg.zynga.com/mwtg/remote/html_server.php?xw_controller=index&xw_action=view) the condition does not occur.
I think I see the bug on Mac. Some of the areas I click on while they're in the IFRAME turn white briefly.
I kinda suspect this is related to the work Timothy did on document backgrounds.
Assignee | ||
Comment 4•15 years ago
|
||
In nsSubDocumentFrame::BuildDisplayList when adding the canvas background color if we don't have a root frame for the subdocument (during loading, etc) we pass the subdocument frame instead. But bug 502424 caused non-canvas frames (in this case iframe) to be ignored and not draw a canvas background color. So we either need an override parameter to PresShell::AddCanvasBackgroundColorItem to force a background or to check the type of aFrame and specifically allow subdocument frames.
Assignee | ||
Comment 5•15 years ago
|
||
Allow subdocument frames in PresShell::AddCanvasBackgroundColorItem.
Attachment #415335 -
Flags: review?(roc)
Can't the subtree root be an nsSubdocumentFrame, e.g. if we're dragging an IFRAME element, where we wouldn't want to add an item for the background color of the canvas containing the IFRAME? I think an explicit parameter would be safer here.
Assignee | ||
Comment 7•15 years ago
|
||
The dragging code doesn't call AddCanvasBackgroundColorItem, but point taken, new patch coming up.
Assignee | ||
Comment 8•15 years ago
|
||
Add a parameter to AddCanvasBackgroundColor item to force drawing of background and use it for subdocument frames.
Attachment #415335 -
Attachment is obsolete: true
Attachment #415358 -
Flags: review?(roc)
Attachment #415335 -
Flags: review?(roc)
Attachment #415358 -
Flags: review?(roc) → review+
Flags: wanted1.9.2+
Flags: blocking1.9.2?
Flags: blocking1.9.2-
Assignee | ||
Updated•15 years ago
|
Attachment #415358 -
Flags: approval1.9.2?
Attachment #415358 -
Flags: approval1.9.2? → approval1.9.2+
Revving the nsIPresShell IID on 1.9.2 at this point is not a good idea. If we want this on 1.9.2 (I think we do) we need to add to nsIPresShell_MOZILLA_1_9_2
Assignee | ||
Comment 10•15 years ago
|
||
Thanks for the heads up, will post a 1.9.2 patch soon.
Assignee | ||
Comment 11•15 years ago
|
||
Attachment #415520 -
Flags: review?(roc)
Attachment #415520 -
Flags: review?(roc)
Attachment #415520 -
Flags: review+
Attachment #415520 -
Flags: approval1.9.2+
Assignee | ||
Comment 12•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Assignee | ||
Comment 13•15 years ago
|
||
status1.9.2:
--- → final-fixed
Target Milestone: mozilla1.9.3a1 → mozilla1.9.2
Reporter | ||
Comment 14•15 years ago
|
||
(In reply to comment #13)
> http://hg.mozilla.org/releases/mozilla-1.9.2/rev/140ae2aa7f1a
No more white space, but now the button clicked and certain areas of the frame turn black in Firefox 3.6 b5. Please review for this condition. See attachments of before button is clicked and after clicking (but before page updates).
Reporter | ||
Comment 15•15 years ago
|
||
Reporter | ||
Comment 16•15 years ago
|
||
Reporter | ||
Comment 17•15 years ago
|
||
Reporter | ||
Updated•15 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 18•15 years ago
|
||
I filed bug 536926 for the issue in comment 15 because it seems to be a separate issue.
Status: REOPENED → RESOLVED
Closed: 15 years ago → 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•