Bug 525751. When using a subdocument frame as a fallback for drawing canvas background color override the canvas frame check. r=roc a=roc

--HG--
extra : rebase_source : 6719372b7404a598a4ce1c1f5190a4f86d0d896b